# ncm

./: .gitmodules  README.md  SKILL.md  analyze_celery.py  analyze_docstrings.py  dev.md  task.md
backend/: .env.example  README.md  initial_data.py  pyproject.toml  pytest.ini  start.py  start_worker.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/celery/: __init__.py  app.py  base.py
backend/app/core/: __init__.py  auth_cookies.py  cache.py  celery_app.py  circuit_breaker.py  command_policy.py  config.py  data_scope.py  db.py  decorator.py  encryption.py  enums.py  event_bus.py  exception_handlers.py  exceptions.py  lifecycle.py  logger.py  metrics.py  middleware.py  minio_client.py  otp_helpers.py  otp_notice.py  otp_service.py  permissions.py  rate_limiter.py  security.py  session_store.py  token_store.py
backend/app/crud/: __init__.py  base.py  crud_alert.py  crud_backup.py  crud_credential.py  crud_dept.py  crud_device.py  crud_discovery.py  crud_inventory_audit.py  crud_log.py  crud_menu.py  crud_role.py  crud_snmp_credential.py  crud_task.py  crud_task_approval.py  crud_template.py  crud_template_approval.py  crud_template_parameter.py  crud_topology.py  crud_user.py
backend/app/features/: __init__.py
backend/app/import_export/: README.md  __init__.py  (+5 more)
backend/docs/: api.md  rbac_seed.toml
backend/fastapi_import_export/: README.md  __init__.py  config.py  db_validation.py  exceptions.py  parse.py  schemas.py  service.py  storage.py  validation.py  validation_core.py  validation_extras.py
backend/tests/: __init__.py  conftest.py
(+305 files in other folders)
